Revert "Update Rust implementation"

--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -1,17 +1,10 @@
 [package]
-name = "is_prime"
+name = "isPrimeContest"
 version = "0.1.0"
-authors = ["RemiIia <valent.xarin@gmail.com>"]
+authors = [""]
 edition = "2018"
 
-[dev-dependencies]
-criterion = "0.3"
-
-[[bench]]
-name = "my_benchmark"
-harness = false
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rayon = "1.5.0"
-
-
+time = "0.2.23"
